# object-pose-estimation

./: README.md  pyproject.toml
assets/cube/: cube_rgbd.sdf
assets/demo/: sample_eval_results.csv
data/: frame.py  gazebo.py  geometry.py  isaac.py  synthetic.py
data/gazebo_exports/: .gitkeep
data/isaac_exports/: .gitkeep
data/synthetic_exports/: frame_002_meta.json
evals/: metrics.py  run_evals.py
evals/results/: eval_results.csv
notebooks/: colab_utils.py  data.ipynb  evals.ipynb  pipeline.ipynb  ros2.ipynb  setup.ipynb
notebooks/.mplcache/: fontlist-v3.11.0.json
rgbd_pose/: detection.py  pose.py
ros2/: Dockerfile  run_demo.sh
ros2/install/: local_setup.sh  setup.sh
ros2/install/object_pose/lib/object_pose/: pose_latency_monitor  rgbd_pose_node.py
ros2/install/object_pose/share/ament_index/resource_index/package_run_dependencies/: object_pose
ros2/install/object_pose/share/object_pose/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2/install/object_pose/share/object_pose/cmake/: object_poseConfig.cmake
ros2/install/object_pose/share/object_pose/config/: demo.rviz
ros2/log/: latest_build
ros2/object_pose/: CMakeLists.txt
ros2/object_pose/scripts/: demo_rgbd_publisher.py
ros2/object_pose/src/: pose_latency_monitor.cpp
